Headline text change

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section class="hero-image">
         <div class="hero-image-content">
             <h1>Building momentum for liveable communities</h1>
-            <p>Providing flexible and collaborative support to transportation, urban planning, and other mission-driven organizations. Plans in Motion helps teams advance the public interest efficient and effectively.
+            <p>Plans in Motion provides flexible and collaborative support to transportation, urban planning, and other mission-driven organizations, helping teams advance the public interest efficiently and effectively.
     </section>
 
     <!-- About Section -->
