--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <br>
                 <br>
                  I have 7 years of experience in the transportation sector in New York City, having served public and non-profit transportation organizations as a planner, project manager, data analyst, and policy advisor.
-                 I moved to Amsterdam in 2025 to pursue a longtime dream of living abroad and to learn from Dutch planning practices.  I provide individual consulting services under the Dutch sole propriotorship, Plans In Motion.
+                 I moved to Amsterdam in 2025 to pursue a longtime dream of living abroad and to learn from Dutch planning practices.  I provide individual consulting services under my Dutch sole propriotorship, Plans In Motion.
                  <br>
                 <br>
                 A healthy, inclusive, and vital built environment is the foundation of a community’s wellbeing.
