Add open graph tags

--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Plans in Motion, NL</title>
+    <meta property="og:title" content="Plans in Motion, NL">
+    <meta property="og:image" content="images/background2.jpeg">
+    <meta property="og:type" content="website">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" type="image/png" href="images/PIM-icon.png">
 </head>
 <body>
     <!-- Navigation Menu -->
@@ -43,7 +46,7 @@
                 <img src="images/headshot.jpeg" alt="About Me photo" class="about-image">
             </div>
             <div class="about-text-panel">
-                <p>Hi! I'm Libby Szuflita. I am a consultant based in Amsterdam, Netherlands, specializing in urban planning and business management.
+                <p>Hi! I'm Libby Szuflita. I am a consultant based in Amsterdam, Netherlands, specializing in urban planning and strategic operations.
                 <br>
                 <br>
                  I have 7 years of experience in the transportation sector in New York City, having served public and non-profit transportation organizations as a planner, project manager, data analyst, and policy advisor.
@@ -75,7 +78,7 @@
                     <span class="degree-name">BA, Environmental Studies & Sociology</span>
                 </p>
                 </div>
-                <div class="feature-item">
+            <div class="feature-item">
                 <div class="feature-icon cred-icon"></div>
                 <p>American Institute of Certified Planners (AICP)
                     <br>
@@ -84,7 +87,7 @@
                     <br>
                     <br>
                     Envision Sustainability Professional (ENV SP)</p>
-                </div>
+            </div>
         </div>
     </section>
 
