About text typo corrected

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <img src="images/headshot.jpeg" alt="About Me photo" class="about-image">
             </div>
             <div class="about-text-panel">
-                <p>Hi! I'm Libby Szuflita. I am a consultant based in Amsterdam, Netherlands, specializing in urban planning and strategic operations.
+                <p>Hi! I'm Libby Szuflita. I am a consultant based in Amsterdam, the Netherlands, specializing in urban planning and strategic operations.
                 <br>
                 <br>
                  I have 7 years of experience in the transportation sector in New York City, having served public and non-profit transportation organizations as a planner, project manager, data analyst, and policy advisor.
