About text update

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <p>Hi! I'm Libby Szuflita. I am a consultant based in Amsterdam, the Netherlands, specializing in urban planning and strategic operations.
                 <br>
                 <br>
-                 I have 7 years of experience in the transportation sector in New York City, having served public and non-profit transportation organizations as a planner, project manager, data analyst, and policy advisor.
+                 I have nearly a decade of experience in the transportation sector in New York City, having served public and non-profit transportation organizations as a planner, project manager, data analyst, and policy advisor.
                  I moved to Amsterdam in 2025 to pursue a longtime dream of living abroad and to learn from Dutch planning practices.  I provide individual consulting services under my Dutch sole propriotorship, Plans In Motion.
                  <br>
                 <br>
