Add contact button

--- a/index.html
+++ b/index.html
@@ -53,13 +53,14 @@
                  I moved to Amsterdam in 2025 to pursue a longtime dream of living abroad and to learn from Dutch planning practices.  I provide individual consulting services under my Dutch sole propriotorship, Plans In Motion.
                 <br>
                 <br>
-                A healthy, inclusive, and vital built environment is the foundation of a community’s wellbeing.
                 I offer versatile planning and management support on an as-needed basis, bolstering clients’ ability to use their limited resources to advance the common good. 
                 <br>
                 <br>
                 Do you need an extra hand to meet a deadline or take on a wishlist project? Together, we’ll customize the scope of our engagement to efficiently and effectively achieve your objectives.
                 <br>
+                <br>
                 </p>
+                <a href="#contact" class="contact-btn">Contact Me</a>
             </div>
         </div>
     </section>
