--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
                 <br>
                 <br>
                  I have nearly a decade of experience in the transportation sector in New York City, having served public and non-profit transportation organizations as a planner, project manager, data analyst, and policy advisor.
-                 I moved to Amsterdam in 2025 to pursue a longtime dream of living abroad and to learn from Dutch planning practices.  I provide individual consulting services under my Dutch sole propriotorship, Plans In Motion.
+                 I moved to Amsterdam in 2025 to pursue a longtime dream of living abroad and to learn from Dutch planning practices.
                 <br>
                 <br>
-                I offer versatile planning and management support on an as-needed basis, bolstering clients’ ability to use their limited resources to advance the common good. 
+                I offer versatile planning and management support on an as-needed basis, bolstering clients’ ability to use their limited resources to advance the common good.
+                I provide individual consulting services under my Dutch sole propriotorship, Plans In Motion.
                 <br>
                 <br>
                 Do you need an extra hand to meet a deadline or take on a wishlist project? Together, we’ll customize the scope of our engagement to efficiently and effectively achieve your objectives.
