Add services photo

--- a/index.html
+++ b/index.html
@@ -142,6 +142,9 @@
                             <li>Interviews and Focus Groups</li>
                         </ul>
                     </div>
+                    <div class="service-block service-block-photo">
+                        <img src="images/highlight-img.jpeg" alt="" class="service-photo">
+                    </div>
                 </div>
             </div>
         </div>
