Reference resized images

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plans in Motion, NL</title>
     <meta property="og:title" content="Plans in Motion, NL">
-    <meta property="og:image" content="images/background2.jpeg">
+    <meta property="og:image" content="images/background.jpg">
     <meta property="og:type" content="website">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,7 +43,7 @@
     <section id="about" class="about">
         <div class="about-content">
             <div class="about-photo-panel">
-                <img src="images/headshot.jpeg" alt="About Me photo" class="about-image">
+                <img src="images/headshot.jpg" alt="About Me photo" class="about-image">
             </div>
             <div class="about-text-panel">
                 <p>Hi! I'm Libby Szuflita. I am a consultant based in Amsterdam, the Netherlands, specializing in urban planning and strategic operations.
@@ -143,7 +143,7 @@
                         </ul>
                     </div>
                     <div class="service-block service-block-photo">
-                        <img src="images/highlight-img.jpeg" alt="" class="service-photo">
+                        <img src="images/highlight-img.jpg" alt="" class="service-photo">
                     </div>
                 </div>
             </div>
