New image og tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Plans in Motion, NL</title>
     <meta property="og:title" content="Plans in Motion, NL">
     <meta property="og:image" content="images/background.jpg">
+    <meta name="image" property="og:image" content="images/background.jpg">
     <meta property="og:type" content="website">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
