New image og tag #2

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plans in Motion, NL</title>
     <meta property="og:title" content="Plans in Motion, NL">
-    <meta property="og:image" content="images/background.jpg">
-    <meta name="image" property="og:image" content="images/background.jpg">
+    <meta name="image" property="og:image" content="highlight-img.jpg">
     <meta property="og:type" content="website">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
