--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plans in Motion, NL</title>
     <meta property="og:title" content="Plans in Motion, NL">
-    <meta name="image" property="og:image" content="highlight-img.jpg">
     <meta property="og:type" content="website">
+    <meta name="image" property="og:image" content="highlight-img.jpg">
+    <meta property="og:url" content="https://www.plansinmotion.nl">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
