Update og tags #3

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Plans in Motion, NL</title>
     <meta property="og:title" content="Plans in Motion, NL">
     <meta property="og:type" content="website">
-    <meta name="image" property="og:image" content="highlight-img.jpg">
+    <meta name="image" property="og:image" content="https://www.plansinmotion.nl/images/highlight-img.jpg">
     <meta property="og:url" content="https://www.plansinmotion.nl">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
