Hero text update

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- Hero Image Section -->
     <section class="hero-image">
         <div class="hero-image-content">
-            <h1>Building momentum for liveable communities</h1>
+            <h1>Building momentum for livable communities</h1>
             <p>Plans in Motion provides flexible and collaborative support to transportation, urban planning, and other mission-driven organizations, helping teams advance the public interest efficiently and effectively.
     </section>
 
